<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/action_search">
    </item>
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings">

        <!-- "file" submenu -->
        <menu>
            <item
                android:id="@+id/lng"
                android:title="@string/lang">
                <menu>
                    <item
                android:id="@+id/eng"
                android:title="Anglais"/>
                <item
                android:id="@+id/fr"
                android:title="Français"/>
                <item
                android:id="@+id/ch"
                android:title="Chinois(Simple)"/>
                <item
                android:id="@+id/ar"
                android:title="Arabe"/>
                </menu>
            </item>
            <item
                android:id="@+id/SubMenuLogOut"
                android:title="@string/home_sub1"/>
            <item
                android:id="@+id/SubMenuNote"
                android:title="@string/home_sub2"/>
            <item
                android:id="@+id/SubMenuAbout"
                android:title="@string/home_sub3"/>
        </menu>
    </item>
    
</menu>