<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Conteneur principal -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="100" >

       
        <!-- conteneur formulaire -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/round_corner_layout"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtLocalisationForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txtLocalisationForm"
                android:textSize="12.5sp" />

            <TextView
                android:id="@+id/txtDateVilleDepart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:text="@string/txtDateVilleDepart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnDateDeb"
                android:layout_width="180dip"
                android:layout_height="30dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dip"
                android:background="@drawable/roundcorner"
                android:text="@string/date_depart_recup"
                android:textColor="#D6CDC6" />

            <Button
                android:id="@+id/btnVilleDepart1"
                android:layout_width="160dip"
                android:layout_height="30dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dip"
                android:background="@drawable/roundcorner"
                android:text="@string/btnVilleDepart1"
                android:textColor="#D6CDC6" />

            <TextView
                android:id="@+id/txtDateRetour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dip"
                android:text="@string/txtDateRetour"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnDateRetour"
                android:layout_width="180dip"
                android:layout_height="30dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dip"
                android:background="@drawable/roundcorner"
                android:text="@string/btnDateRetour"
                android:textColor="#D6CDC6" />

            <Button
                android:id="@+id/btnVilleArrive1"
                android:layout_width="160dip"
                android:layout_height="30dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dip"
                android:background="@drawable/roundcorner"
                android:text="@string/btnVilleArrive1"
                android:visibility="gone"
                android:textColor="#D6CDC6" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:button="@drawable/chekbox_selector"
                android:text="  Trouver une agence à proximité" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo_koutchi2" />

                <Button
                    android:id="@+id/btnSearchCar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@color/title_color"
                    android:textColor="@color/white"
                    android:text="Lancer une réservation" />
            </RelativeLayout>
        </LinearLayout>
        <!-- conteneur formulaire -->
    </LinearLayout>
    <!-- Conteneur principal -->

</LinearLayout>