<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Conteneur principal -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#E84C3D"
        android:orientation="vertical"
        android:weightSum="100" >

        <!-- conteneur logo_koutchi -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="22"
            android:background="#ffffff"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:contentDescription="@string/logo_koutchi"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:src="@drawable/logo_koutchi" />
        </LinearLayout>
        <!-- conteneur logo_koutchi -->
        <!-- conteneur texte -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="5"
            android:background="#E84C3D"
            android:orientation="horizontal" 
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txtAProxim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAProxim" />

            <TextView
                android:id="@+id/txtLocalMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Ben Aknoun, Alger" />
        </LinearLayout>
        <!-- conteneur texte -->
        <!-- conteneur Réserver un véhicule -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginBottom="1.5dip"
            android:layout_weight="36.5"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnAgences"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff"
                android:drawableTop="@drawable/reserver"
                android:paddingTop="30dip"
                android:text="@string/btnAgences" />
        </LinearLayout>
        <!-- conteneur Réserver un véhicule -->
        <!-- conteneur last part -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="36.5"
            android:orientation="horizontal"
            android:weightSum="10" >

            <Button
                android:id="@+id/btnReservations"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="1.5dip"
                android:layout_weight="5"
                android:background="#ffffff"
                android:paddingTop="30dip"
                android:drawableTop="@drawable/my_reserv"
                android:text="@string/btnReservations" />

            <Button
                android:id="@+id/btnCompte"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:background="#ffffff"
                android:paddingTop="30dip"
                android:drawableTop="@drawable/compte"
                android:text="@string/btnCompte" />
        </LinearLayout>
        <!-- conteneur last part -->
    </LinearLayout>
    <!-- Conteneur principal -->

</LinearLayout>